Fixed vertical alignment of data cells

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -48,10 +48,12 @@ body {
 }
 
 .list-item {
-	padding: 10px;
+	// padding: 10px;
+	padding: 10px 10px 6px;
 	border: 1px solid white;
 	border-bottom: none;
 	// line-height: 20px;
+	// vertical-align: middle;
 	input,
 	select {
 		border: none;
@@ -80,6 +82,9 @@ body {
 .finished-column {
 	width: 10px;
 	padding-left: 5px;
+	input {
+		margin-top: 0;
+	}
 }
 
 .list-item:nth-child(even) {
